Dark mode fixes (#5676)
* Fix element search icons

* Fix network monitor scrollbar

* Make placeholder faded text consistent in the console

* Make the proper cursor color show depending on the theme

--- a/src/devtools/client/debugger/src/components/SecondaryPanes/EventListeners.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/EventListeners.css
@@ -109,10 +109,6 @@
   color: var(--theme-comment);
 }
 
-.event-search-input::placeholder {
-  color: var(--theme-comment);
-}
-
 .devtools-searchinput-clear {
   position: absolute;
   right: 0px;
